--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,4 +1,4 @@
-#root {
+/* #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
@@ -62,4 +62,4 @@
 
 .micro-stacks-logo {
   color: white !important;
-}
+} */
